--- a/src/layout/components/PageLayout/style.scss
+++ b/src/layout/components/PageLayout/style.scss
@@ -2,7 +2,7 @@
 
 .content {
   flex: 1 0 auto;
-  padding: 3rem 7rem;
+  // padding: 3rem 7rem;
   position: relative;
   vertical-align: top;
 
